# epub-bilingual

./: .env.example  .gitignore  README.md  pyproject.toml
.githooks/: commit-msg  pre-commit
books/: tiny.epub
examples/: terminology.example.csv
scripts/: create_tiny_epub.py
src/ebook_bilingual/: __init__.py  cli.py  config.py  epub.py  html_bilingual.py  interactive.py  llm.py  paths.py  pricing.py  styles.py  tui.py
styles/: eink-10.3.css
tests/: test_cli.py  test_config.py  test_converter.py  test_html_bilingual.py  test_interactive.py  test_llm.py  test_paths.py  test_pricing.py  test_styles.py  test_tui.py
